--- a/sparkling_kidzone - Copy/index.html
+++ b/sparkling_kidzone - Copy/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SPBZ — Kids Clothing</title>
-  <link rel="icon" type="image/png" href="/e/logo.png">
+  <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="#">
-   <img src="/e/logo.png" alt="Logo" class="logo-img">
+   <img src="logo.png" alt="Logo" class="logo-img">
         <!-- <span>Sparkling Pieces by Zee </span> -->
          <h1 class="brand-name">Sparkling Pieces <br> <span>by Zee</span></h1>
       </a>
